deployment/manifests.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secret-world
  namespace: secret-world
spec:
  replicas: 1
  selector:
    matchLabels:
      app: secret-world
  template:
    metadata:
      labels:
        app: secret-world
    spec:
      containers:
      - name: secret-world
        image: docker.io/eduhass/secret-world:main
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "0.5"
            memory: "512Mi"
          requests:
            cpu: "0.2"
            memory: "256Mi"
        readinessProbe:
          httpGet:
            path: /
            port: 8080  # Mudou de 80 para 8080
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 8080  # Mudou de 80 para 8080
          initialDelaySeconds: 15
          periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: secret-world
  namespace: secret-world
spec:
  selector:
    app: secret-world
  ports:
  - port: 80           # Porta do serviço 
    targetPort: 8080   # Porta do container
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: secret-world-ingress
  namespace: secret-world
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - secretworld.hasslab.tech
    secretName: secret-world-tls
  rules:
  - host: secretworld.hasslab.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: secret-world
            port:
              number: 80
